--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class="form">
+        <h1 class="answer">N</h1>
+        <input type="number" class="inp-from" placeholder="from" value="1">
+        <input type="number" class="inp-to" placeholder="to" value="10">
+        <button class="btn-generate">Generate</button>
+    </div>
     <script src="app/main.js"></script>
 </body>
 </html>
