20220506 add images of classes and roles

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <img src="img/all.jpg" class="necromanser">
-    <!-- <script src="main.js"></script> -->
+    <div class="users">
+
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
