add ui interface

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="users">
-
+    <div class="ui">
+        <div><textarea class="ta_users" cols="20" rows="5" placeholder="user1, user2, user3,..." autofocus></textarea></div>
+        <div><button class="btn_users">Generate</button></div>
     </div>
-    <script src="app.js"></script>
+    <div class="users"></div>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
